# nanoWorldModel

./: .gitignore  README.md  configs.py  pyproject.toml  sample.py  train.py
data/: bouncing_mnist_generator.py  convert_dataset.py
model/: encdec.py  rotary_embedding.py  rotary_embeddings.py  video_dit.py
